feat: add product
